--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.462.0",
     "next": "14.2.5",
     "next-themes": "^0.4.3",
+    "nextjs-toploader": "^3.7.15",
     "puppeteer": "^23.9.0",
     "react": "^18",
     "react-countup": "^6.5.3",
