--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "14.2.5",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
+    "openai": "^4.76.0",
     "puppeteer": "^23.9.0",
     "react": "^18",
     "react-countup": "^6.5.3",
